[gd_scene load_steps=6 format=3 uid="uid://c17tlh5h56gig"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_giwum"]
[ext_resource type="FontFile" uid="uid://dm5qvkkavxgxc" path="res://fonts/BAD GRUNGE.ttf" id="2_4n3xc"]
[ext_resource type="Texture2D" uid="uid://deqtm41kpw1xm" path="res://images/main_screen_image.jpg" id="2_6qadi"]

[sub_resource type="LabelSettings" id="LabelSettings_7xpii"]
font = ExtResource("2_4n3xc")
font_size = 140
font_color = Color(0.831392, 0.492849, 7.70092e-07, 1)
shadow_color = Color(0.360128, 0.208358, 0, 1)

[sub_resource type="GDScript" id="GDScript_3blrh"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_giwum")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -1080.0
offset_right = 1920.0
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="game_title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 120.0
offset_top = 100.0
offset_right = 932.0
offset_bottom = 257.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.835294, 0.509804, 0, 1)
theme_override_colors/font_shadow_color = Color(0.360128, 0.208358, 0, 1)
text = "Alien Armageddon"
label_settings = SubResource("LabelSettings_7xpii")
horizontal_alignment = 1

[node name="start_button" type="Button" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = -190.0
offset_right = 380.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.385493, 0.385492, 0.385492, 1)
theme_override_font_sizes/font_size = 40
text = "Start"
flat = true
alignment = 0
icon_alignment = 1
script = SubResource("GDScript_3blrh")

[node name="main_screen_image" type="TextureRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 1080.0
offset_bottom = 540.0
grow_vertical = 2
texture = ExtResource("2_6qadi")

[node name="settings_button" type="Button" parent="."]
offset_left = 1140.0
offset_top = 430.0
offset_right = 1340.0
offset_bottom = 510.0
theme_override_colors/font_hover_color = Color(0.385493, 0.385492, 0.385492, 1)
theme_override_font_sizes/font_size = 40
text = "Settings"
flat = true
alignment = 0

[node name="exit_button" type="Button" parent="."]
offset_left = 1140.0
offset_top = 510.0
offset_right = 1340.0
offset_bottom = 590.0
theme_override_colors/font_hover_color = Color(0.385493, 0.385492, 0.385492, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Exit"
flat = true
alignment = 0

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
